<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_medicines"
        android:icon="@drawable/ic_pill"
        android:title="@string/nav_medicines" />
    <item
        android:id="@+id/nav_health_logs"
        android:icon="@drawable/ic_health"
        android:title="@string/nav_health_logs" />
    <item
        android:id="@+id/nav_doctor"
        android:icon="@drawable/ic_doctor"
        android:title="@string/nav_doctor" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>

